# traffic_sthlm

./: .gitignore  Dashboard_design.txt  README.md  requirements.txt
EDA/: sl_eda.ipynb  (+1 more)
pipeline/transform/dbt_code/automate_dgstr/: pyproject.toml  setup.py
pipeline/transform/dbt_code/automate_dgstr/automate_dgstr/: assets.py  definitions.py  jobs.py  load_trafikverket_data_pipeline.py  project.py  schedules.py  sensors.py  sl_dlt_pipe.py
pipeline/transform/dbt_code/automate_dgstr/tmprpr5vglt/history/runs/: 000e205a-ff5b-424f-ad0e-1620207cf87d.db  008b70f2-4e24-4467-b556-25c09d6ed8b6.db  00c5cefd-0270-45f4-9331-3eb968429848.db  00ff37a4-e6a0-41ab-bd96-a84239a0a32a.db  00ff79c5-25d3-4b33-99ea-a3ded2dbfbb6.db  015ad80d-6b04-4338-b21c-6d4ee6273ec1.db  0160064e-457e-48f9-b140-fe0fdbcef504.db  01aae2b4-70f2-437c-b931-95527d8c741f.db  01b3db27-c927-4545-a8ad-d58d08dbb05b.db  01d4e3fc-507a-4262-b829-fc2d58d77d76.db  0218f19a-27c8-468d-8cfe-be9ade9458c8.db  0259161b-cb59-431f-a256-89ba0edd4c67.db  02a39962-4520-494c-9261-04d820651ef2.db  02e69518-674a-4cbe-a29e-4079909de36c.db  0305f211-86b8-43e2-a709-18877bbdac0a.db  0306dc13-c0bc-49dc-9f80-2ef46cbfa2e1.db  030abbd8-fd10-4cb0-ba64-17ec9bccce27.db  030c0eb8-33f8-47a4-9278-98d168ba0f52.db  03381305-413e-4a90-83e0-0bfb5b4adc4d.db  03412f23-2ea1-4a04-a86f-ca5361aef965.db  034c8e06-47a4-49c5-962b-947638e9f10f.db  037cb6fc-e239-49a3-89f4-0b40a1f7554a.db  03b6f553-6ef9-4f6a-8471-78e0bdb11bda.db  03d226eb-4f87-4288-8f8c-d5140c9c5a5d.db  (+935 more)
pipeline/transform/dbt_code/automate_dgstr/tmprpr5vglt/schedules/: schedules.db
(+61 files in other folders)
