[project]
name = "automate_dgstr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-dbt",
    "dbt-snowflake<1.9",
    "dbt-snowflake<1.9",
    "dbt-snowflake<1.9",
    "dbt-snowflake<1.9",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver", 
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "automate_dgstr.definitions"
code_location_name = "automate_dgstr"